--- a/zadacha1.html
+++ b/zadacha1.html
@@ -11,8 +11,8 @@
 
 
 </style>
-<body style = "text-align: center; background-color:#8A2BE2">
-    <h1 style = "text-align: center"> Мир пончиков</h1>
+<body>
+    <h1 style = "color: red"> Мир пончиков</h1>
     <img src= "/uploads/2023/02/donut.png">
 
 </body>
