--- a/zadacha1.html
+++ b/zadacha1.html
@@ -11,7 +11,7 @@
 
 
 </style>
-<body>
+<body style = "text-align: center; ">
     <h1 style = "color: red"> Мир пончиков</h1>
     <img src= "/uploads/2023/02/donut.png">
 
