--- a/zadacha1.html
+++ b/zadacha1.html
@@ -12,7 +12,7 @@
 
 </style>
 <body style = "text-align: center; ">
-    <h1 style = "color: red"> Мир пончиков</h1>
+    <h1 style = "color: red"> Мир  сладких пончиков</h1>
     <img src= "/uploads/2023/02/donut.png">
 
 </body>
